# huffman-coding

./: .gitignore  CMakeLists.txt  README.md  assert.hpp  help.txt  huff.cpp  huffman  huffman.cpp  huffman.hpp  test_huffman  test_huffman.cpp
huffman/: debug_encode.cpp  huffman.cpp  huffman.hpp  test_huffman.cpp
